src/core/config/transformer/snapshots/tailcall__core__config__transformer__subgraph__tests__keys__keys_set.snap
---
source: src/core/config/transformer/subgraph.rs
expression: keys
---
Keys(
    {
        "a": Keys(
            {
                "b": Keys(
                    {
                        "c": Keys(
                            {},
                        ),
                    },
                ),
                "d": Keys(
                    {},
                ),
            },
        ),
        "e": Keys(
            {},
        ),
        "f": Keys(
            {
                "g": Keys(
                    {},
                ),
            },
        ),
    },
)
